<resources>
    <string name="app_name">MarqeuSina</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_as_owner">Register As Owner</string>
    <string name="register_as_finder">Register As Finder</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="don_t_have_an_account_signup">Don\'t have an account - SignUp</string>
    <string name="full_name">Full Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="login_register_as_owner">LoginRegister As Owner</string>
    <string name="login_register_as_finder">LoginRegister As Finder</string>
    <string name="already_have_account_signin">already have account? SignIn</string>
    <string name="profile">Profile</string>
    <string name="notification">Notification</string>
    <string name="bookings">Bookings</string>
    <string name="all_customers">All Customers</string>
    <string name="packeges">packeges</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="dear_sohaib">Dear Sohaib</string>
    <string name="enter_marquee_details">Enter Marquee Details</string>
    <string name="only_hall_booking_price">Only Hall Booking Price</string>
    <string name="login">Login</string>
    <string name="register_marquee">Register Marquee</string>
    <string name="number_of_guests_marquee_can_handel">Number of Guests Marquee can Handle</string>
    <string name="marquee_name">Marquee Name</string>
    <string name="enter_marquee_address">Enter Marquee Address</string>
    <string name="marquee_address">Marquee Address</string>
    <string name="enter_perhead_price">Enter PerHead Price</string>
</resources>