<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RegisterAsOwnerFragment"
    android:orientation="vertical"
    android:background="#CCA0B0"
    >

    <!--  Make a registration form for Owner-->

<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_marginTop="200dp"
    >
    <EditText
        android:layout_marginTop="10dp"
        android:id="@+id/owner_registration_full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        />

    <EditText
        android:layout_marginTop="10dp"
        android:id="@+id/owner_registration_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        />

    <EditText
        android:layout_marginTop="10dp"
        android:id="@+id/owner_registration_contact_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contact_number"
        android:inputType="number"
        />

    <EditText
        android:layout_marginTop="10dp"
        android:id="@+id/owner_registration_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        />


    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/owner_registration_already_have_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/already_have_account_signin"
        />


</LinearLayout>


</LinearLayout>